[gd_scene load_steps=4 format=3]

[ext_resource path="res://scripts/world/facility_ambience_controller.gd" type="Script" id=1]
[ext_resource path="res://scenes/world/missions/mission_cold_verge_oxygen_run.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/mission_hud.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/core/survival_system_stub.gd" type="Script" id=4]

[node name="Level01" type="Node3D"]

[node name="MainCamera" type="Camera3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 8 )

[node name="Sun" type="DirectionalLight3D" parent="."]

[node name="FacilityAmbienceController" type="Node3D" parent="."]
script = ExtResource( 1 )

[node name="FacilityAmbienceController/Hum3D" type="AudioStreamPlayer3D" parent="FacilityAmbienceController"]

[node name="FacilityAmbienceController/Heartbeat3D" type="AudioStreamPlayer3D" parent="FacilityAmbienceController"]

[node name="FacilityAmbienceController/HeartbeatSoft" type="AudioStreamPlayer3D" parent="FacilityAmbienceController"]
# assign a soft heartbeat stream in the inspector

[node name="FacilityAmbienceController/HeartbeatIntense" type="AudioStreamPlayer3D" parent="FacilityAmbienceController"]
# assign an intense heartbeat stream in the inspector

[node name="FacilityAmbienceController/LightA" type="OmniLight3D" parent="FacilityAmbienceController"]
groups = [ "facility_light" ]

[node name="FacilityAmbienceController/LightB" type="OmniLight3D" parent="FacilityAmbienceController"]
groups = [ "facility_light" ]

[node name="SurvivalSystem" type="Node" parent="."]
script = ExtResource( 4 )

[node name="MissionInstance" parent="."]
instance = ExtResource( 2 )

[node name="HUDCanvas" type="CanvasLayer" parent="."]

[node name="HUDCanvas/MissionHUD" parent="HUDCanvas"]
instance = ExtResource( 3 )
